# otawa-wcet-mod

./: .gitignore  OTAWA.geany  README.md  bugs.md  build.sh  gdb-py-tricks  processors.dia  tricks.md
linux-x86_64/otawa-core-build/: .setup-armv7t  .setup-elm  .setup-frontc  .setup-gel  .setup-gliss2  .setup-lp_solve5  .setup-orange  .setup-otawa  .setup-ppc2  .setup-thot  Makefile
linux-x86_64/otawa-core-build/armv5t/: default.mk
linux-x86_64/otawa-core-build/armv7t/: .hgtags  DEV  Makefile  arm.irg  config.mk  config.tpl  validator.cfg
linux-x86_64/otawa-core-build/elm/: cmake_install.cmake
linux-x86_64/otawa-core-build/gel/: cmake_install.cmake  config.h
linux-x86_64/otawa-core-build/ogensim/: CMakeLists.txt  Cache.cpp  Cache.h  Execute.cpp  Execute.h  ExecuteLPC2138.h  Fetch.cpp  Fetch.h  GenericProcessor.cpp  GenericProcessor.h  GenericSimulator.cpp  GenericSimulator.h  GenericState.h  InstructionQueue.cpp  Memory.cpp  Memory.h  PipelineStage.cpp  PipelineStage.h  README  SimulatedInstruction.h  build.sh  debug.h  hwcache.cpp  hwcache.h  main.cpp
modules/: armv7t.py  gliss2.py  lp_solve5.py  orange.py  otawa1.py  ppc2.py
otawa/: Makefile  OTAWA.geany  README  bugs.md  build.sh  processors.dia  tricks.md
otawa/doc/: overview.drawio
otawa/linux-x86_64/: .packages
otawa/modules/: armv7t.py  elm1.py  frontc.py  gel.py  ogensim.py  orange.py  otawa1.py  ppc2.py  thot.py
otawa/packager/: build.py  buildlib.py  gen.py  pack.py
packager/: base.py  build.py  buildlib.py  install.py
scripts/: ogensim2times.py  sanity_check_otawa.py  simtrace.py
(+716 files in other folders)
